syntax="proto3";

package proto;
option go_package="../proto";


// 定义相关的服务 确定参数和返回值
service UserService {
	// 用户注册
	rpc Signup(ReqSignup) returns (RespSignup) {}

	// 用户登录
	rpc Signin(ReqSignin) returns (RespSignin) {}

	// 获取用户信息
	rpc UserInfo(ReqUserInfo) returns (RespUserInfo) {}

	// 获取用户文件
	rpc UserFiles(ReqUserFiles) returns (RespUserFiles) {}

	// 文件重命名
	rpc UserFileRename(ReqUserFileRename) returns (RespUserFileRename) {}
}

// 用户注册
message ReqSignup {
	string username =1;
	string password=2;
}


message RespSignup {
	int32 code=1;
	string message =2;
}

// 用户登录
message ReqSignin {
	string username=1;
	string password=2;

}

message RespSignin {
	int32 code=1;
	string token=2;
	string message=3;
	
}

// 获取用户信息
message ReqUserInfo {
	string username=1;
}

message RespUserInfo {
	int32 code=1;
	string message=2;
	string username=3;
	string email=4;
	string phone=5;
	string signupAt=6;
	string lastActiveAt=7;
	int32 status =8;

}


// 获取用户文件列表
message ReqUserFiles {
	string username=1;
}

message RespUserFiles {
	int32 code = 1;
    string message =2;
    bytes fileData = 3;
}

// 文件重命名
message ReqUserFileRename {
	string username = 1;
	string filehash = 2;
	string newFileName = 3;
}
  
message RespUserFileRename {
	int32 code = 1;
	string message =2;
	bytes fileData = 3;
}