syntax = "proto3";

package proto;
option go_package="../proto";


service DownloadService {
    // 获取下载入口地址
    rpc DownloadEntry(ReqDownloadEntry) returns (RespDownloadEntry) {}
}

message ReqDownloadEntry{
}

message RespDownloadEntry{
    int32 code = 1;
    string message = 2;
    string entry = 3;
}